versioned_docs/version-5.2/client-api/operations/maintenance/indexes/reset-index.mdx
---
title: "Reset Index Operation"
hide_table_of_contents: true
sidebar_label: Reset Index
sidebar_position: 3
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Reset Index Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="">

* Use `ResetIndexOperation` to rebuild an index:  
  * All existing indexed data will be removed.  
  * All items matched by the index definition will be re-indexed.

* __Indexes scope__:  
  * Both static and auto indexes can be reset.

* __Nodes scope__:  
  * When resetting an index from the __client__:  
    The index is reset only on the preferred node only, and Not on all the database-group nodes.  
  * When resetting an index from the __Studio__ (from the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)):  
    The index is reset on the local node the browser is opened on, even if it is Not the preferred node.  

* If index is [disabled](../../../../client-api/operations/maintenance/indexes/disable-index.mdx) or [paused](../../../../client-api/operations/maintenance/indexes/stop-index.mdx) 
  then resetting the index will put it back to the __normal__ running state  
  on the local node where action was performed.

* In this page:
    * [Reset index](../../../../client-api/operations/maintenance/indexes/set-index-priority.mdx#set-priority---single-index)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/set-index-priority.mdx#syntax)

</Admonition>
## Reset index

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the reset index operation, pass index name
var resetIndexOp = new ResetIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
// An exception will be thrown if index does not exist
store.Maintenance.Send(resetIndexOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the reset index operation, pass index name
var resetIndexOp = new ResetIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.SendAsync
// An exception will be thrown if index does not exist
await store.Maintenance.SendAsync(resetIndexOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`public ResetIndexOperation(string indexName);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| - | - | - |
| **indexName** | string | Name of an index to reset |




</LanguageContent>
<LanguageContent language="java">


**ResetIndexOperation** will remove all indexing data from a server for a given index so the indexation can start from scratch for that index.

## Syntax

<TabItem value="reset_index_1" label="reset_index_1">
<CodeBlock language="java">
{`public ResetIndexOperation(String indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexName** | String | name of an index to reset |


## Example

<TabItem value="reset_index_2" label="reset_index_2">
<CodeBlock language="java">
{`store.maintenance()
    .send(new ResetIndexOperation("Orders/Totals"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="">

* Use `ResetIndexOperation` to rebuild an index:  
  * All existing indexed data will be removed.  
  * All items matched by the index definition will be re-indexed.  

* __Indexes scope__:  
  * Both static and auto indexes can be reset.

* __Nodes scope__:  
  * When resetting an index from the __client__:  
    The index is reset only on the preferred node only, and Not on all the database-group nodes.  
  * When resetting an index from the __Studio__ (from the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)):  
    The index is reset on the local node the browser is opened on, even if it is Not the preferred node.  

* If index is [disabled](../../../../client-api/operations/maintenance/indexes/disable-index.mdx) or [paused](../../../../client-api/operations/maintenance/indexes/stop-index.mdx) 
  then resetting the index will put it back to the __normal__ running state  
  on the local node where action was performed.

* In this page:
    * [Reset index](../../../../client-api/operations/maintenance/indexes/set-index-priority.mdx#set-priority---single-index)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/set-index-priority.mdx#syntax)

</Admonition>
## Reset index

<TabItem value="reset" label="reset">
<CodeBlock language="js">
{`// Define the reset index operation, pass index name
const resetIndexOp = new ResetIndexOperation("Orders/Totals");

// Execute the operation by passing it to maintenance.send
// An exception will be thrown if index does not exist
await store.maintenance.send(resetIndexOp);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const resetIndexOp = new ResetIndexOperation(indexName);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| - | - | - |
| **indexName** | string | Name of an index to reset |




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)

### Server
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [How to Get Index](../../../../client-api/operations/maintenance/indexes/get-index)
- [How to Put Indexes](../../../../client-api/operations/maintenance/indexes/put-indexes)
- [How to Delete Index](../../../../client-api/operations/maintenance/indexes/delete-index)


-->